# dioxus-gloo-web-worker-example

./: .gitignore  Cargo.toml  README.md
assets/: worker.js
src/: main.rs
